# RadiantCoreEngine

./: CMakeLists.txt  gradle.properties  progress.txt  readme.txt  usage.txt
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/scripts/: main.lua
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/components/app/: engine.cpp  event_dispatcher.cpp  event_pipe.cpp  time.cpp  timer.cpp
app/src/main/cpp/components/gfx/: egl_renderer.cpp
app/src/main/cpp/components/input/: input.cpp
app/src/main/cpp/components/luax/: !about.txt
app/src/main/cpp/include/app/: engine.h  event_dispatcher.h  event_pipe.h  time.h  timer.h
app/src/main/cpp/include/gfx/: egl_renderer.h  presentation_types.h
app/src/main/cpp/include/input/: input.h
app/src/main/cpp/include/platform/android/: android_runtime.h  input_android.h  presentation_android.h  rce_platform.h
app/src/main/cpp/platform/android/: android_runtime.cpp  app_init.cpp  app_main.cpp  input_android.cpp  native_app_glue_include.c  paths_android.cpp  presentation_android.cpp  ui_insets_jni.cpp
app/src/main/java/com/example/myapplication/: MyNativeActivity.java
components/app/: paths.cpp
components/gfx/: egl_renderer.cpp
components/luax/: lua_runtime.cpp
docs/: rendering_architecture.md  usage.txt
gradle/wrapper/: gradle-wrapper.properties
include/app/: log.h  paths.h
include/gfx/: egl_renderer.h
include/luax/: lua_runtime.h
platform/android/: app_main.cpp
